--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  
+  "exclude": [
+    "**/*.spec.ts"
+  ],
 }
