worked on fixing spec files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
   },
   
   "exclude": [
-    "**/*.spec.ts"
+    "node_modules",
+    "cypress",
+    "cypress.config.ts",
+    "**/*.cy.jsx"
   ],
 }
