--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.191",
+    "concurrently": "^7.6.0",
     "cypress": "^12.8.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
